--- a/package.json
+++ b/package.json
@@ -4,16 +4,33 @@
   "description": "Bootcamp Backend Api",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production node server",
     "dev": "nodemon server"
   },
   "author": "Ashiru Adedayo",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.11",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "node-geocoder": "^3.27.0",
+    "nodemailer": "^6.7.0",
+    "slugify": "^1.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "eslint": "^8.0.1",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.13",
+    "prettier": "^2.4.1"
   }
 }
